# SignSense-AI-Powered-Sign-Language-Recognition

./: .gitignore  .pylintrc  README.md  collect_training_data.py  gestures_3.h5  gestures_4.h5  gestures_to_detect.py  opencv_mp_feed.py  py_tools_check.sh  pyproject.toml  sign_language_recog.py  sign_sense.py  streamlit_webrtc_video.py  train_nn.py  twilio_turn_server.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: ci_checks.yml
Logs/train/: events.out.tfevents.1712874787.adminisatorsmbp.d.port.ac.uk.4515.0.v2  events.out.tfevents.1712875449.adminisatorsmbp.d.port.ac.uk.7432.0.v2  events.out.tfevents.1712877298.adminisatorsmbp.d.port.ac.uk.14746.0.v2  events.out.tfevents.1712877926.adminisatorsmbp.d.port.ac.uk.17260.0.v2  events.out.tfevents.1712878454.adminisatorsmbp.d.port.ac.uk.19476.0.v2  events.out.tfevents.1712878680.adminisatorsmbp.d.port.ac.uk.22096.0.v2
mediapipe_data/Good/0/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
mediapipe_data/Good/1/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
mediapipe_data/Good/10/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  (+9 more)
(+3509 files in other folders)
