[tool.poetry]
name = "signsense"
version = "0.1.0"
description = ""
authors = ["sanjeevz3009 <sanjeevz1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
tensorflow = "^2.16.1"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
opencv-python = "^4.9.0.80"
mediapipe = "0.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
