[tool.poetry]
name = "signsense"
version = "0.1.0"
description = ""
authors = ["sanjeevz3009 <sanjeevz1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7,<3.12"
tensorflow = "^2.16.1"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
opencv-python = "^4.9.0.80"
mediapipe = "0.10.9"
streamlit = "^1.33.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
bandit = "^1.7.8"
isort = "^5.13.2"

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
